Add notes to presentation TotE

--- a/TorreElefante/contenido.tex
+++ b/TorreElefante/contenido.tex
@@ -1,25 +1,28 @@
 \begin{frame}{}
 	\maketitle
 \end{frame}
+\note[itemize]{
+	\item Una de las mejores historias del ciclio de Conan
+	\item Una de las mejores historias de REH
+}
 
 \begin{frame}{La torre del elefante}
 \begin{columns}
 \column[t]{0.5\textwidth}
  \begin{figure}[htb]
   \centering
-  \includegraphics[width=0.5\textwidth]{img/Intro}
+  \includegraphics[width=0.4\textwidth]{img/Intro}
+  \caption{Mark Schultz}
 \end{figure}
 \column[t]{0.5\textwidth}
      \begin{itemize}
          \item Una historia corta de Robert E. Howard
          \item Una de sus mejores historias
          \item Espada y hechicería pura
-         \begin{itemize}
-          \item Ilustración de Mark Schultz
-         \end{itemize}
      \end{itemize}
 \end{columns}
 \end{frame}
+\note{Voy a dar crédito a los artistas cuando no sea evidente}
 
 \begin{frame}{Publicación}
 \begin{columns}
@@ -43,6 +46,9 @@
     \end{itemize}
 \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Publicación}
 	\begin{columns}
@@ -59,6 +65,12 @@
 		\end{itemize}
 	\end{columns}
 \end{frame}
+\note{
+La torre del elefante forma parte del ciclo de Conan, que consta de 18 a 25 historias de REH, dependiendo de cómo queramos contarlas.
+Si solo se cuentan historias publicadas en la vida de REH, son 18 (o 17 dependiendo de si se cuenta o no \say{La hija del gigante helado}).
+
+Si se añaden la historias que fueron rechazadas por los editores durante la vida de REH, y luego publicadas después de su muerte; así como fragmentos que el autor dejó inconclusos y que fueron --muchos años después-- terminados y publicados por otros autores, ahí la cuenta sube a 25.
+}
 
 \begin{frame}{Orden de publicación del ciclo de Conan}
 \begin{figure}[htb]
@@ -66,6 +78,18 @@
   \includegraphics[width=0.32\textwidth]{img/OrdenPublicacion}
 \end{figure}
 \end{frame}
+\note{
+Ha habido varios intentos de establecer una cronología de la vida ficticia de Conan. De estos intentos el más famoso es el de Miller/Clark/de Camp, porque contó con la bendición de REH en su versión más temprana.
+
+Aunque hay por los menos otros cuatro intentos importantes, que ya incluyen los trabajos de los otros autores escritos muchos años después de la muerte de REH.
+
+Casi todas las cronologías coinciden en que este debería ser el segundo *relato* de Conan, (de los escritos por REH), en el orden de la vida del personaje.
+Es decir, donde nos encontramos con un Conan muy joven. Aunque en el relato su edad no se menciona, de acuerdo a las cronologías Conan deberia haber tenido cerca de 17 años.
+
+De las otras obras originales de REH anteriores en la cronología dos no son cuentos.
+El ensayo La era Hiboria y el poema Cimeria.
+Finalmente a la única historia que la antecede: La hija del gigante helado a veces se le disputa su status de historia de Conan.
+}
 
 \begin{frame}{Cronología ficticia del personaje}
 \begin{figure}[htb]
@@ -73,6 +97,9 @@
   \includegraphics[width=0.85\textwidth]{img/Cronollogias}
 \end{figure}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Espacio en la edad Hiboria}
 \begin{figure}[htp]
@@ -89,6 +116,9 @@
  \caption{La ciudad de Arenjun en la provincia de Zamora. La \say{ciudad de los ladrones}}
  \end{figure}
 \end{frame}
+\note{
+
+}
 
 \section{Adaptaciones}
 
@@ -115,6 +145,9 @@
     \end{itemize}
 \end{columns}
 \end{frame}
+\note{
+
+}
 
 % \begin{frame}{}
 % \begin{figure}[htp]
@@ -170,6 +203,9 @@
     \end{itemize}
 \end{columns}
 \end{frame}
+\note{
+
+}
 
 % \begin{frame}{}
 % \begin{figure}[htp]
@@ -237,6 +273,9 @@
     \end{itemize}
 \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Acción comics: La torre del elefante}
 	\begin{columns}
@@ -259,7 +298,9 @@
 		\end{itemize}
 	\end{columns}
 \end{frame}
+\note{
 
+}
 
 \begin{frame}{Conan illustré: La Tour de l’Eléphant}
 	\begin{columns}
@@ -281,6 +322,9 @@
 		\end{itemize}
 	\end{columns}
 \end{frame}
+\note{
+
+}
 % \begin{frame}{}
 % \begin{figure}[htp]
 %  \centering
@@ -334,6 +378,11 @@
     \end{figure}
 \end{columns}
 \end{frame}
+\note{
+Todo el relato ocurre en una noche en la ciudad de Arenjunn, en la provincia de Zamora.
+La historia comienza en una taberna del barrio del Maul.
+La taberna está repleta de forajidos, ladrones, mercenarios, prostitutas y aventureros.
+}
 
 \begin{frame}{}
 \begin{columns}
@@ -351,6 +400,11 @@
     \end{figure}
 \end{columns}
 \end{frame}
+\note{
+Uno de ellos, está contando sus planes acerca de un crimen que planea cometer.
+Mientras está narrando menciona la joya conocida como \say{el corazón del elefante} que está en posesión del temido hechicero Yara, en su torre.
+Otro de los asistentes es Conan un bárbaro del norte; que en ese momento es muy joven --apenas ha dejado de ser un adolecente--.
+}
 
 \begin{frame}{}
 \begin{columns}
@@ -368,6 +422,10 @@
     \end{figure}
 \end{columns}
 \end{frame}
+\note{
+El bárbaro decide interrumpir la narración para preguntar con curiosidad acerca de la joya. Debido a la interrupción, empieza una discusión que termina en una pelea.
+En medio de la confusión y después de matar a su oponente Conan escapa y decide encaminarse a \say{la torre del elefante} para tratar de robar la joya.
+}
 
 \begin{frame}{}
 \begin{columns}
@@ -385,6 +443,15 @@
     \end{figure}
 \end{columns}
 \end{frame}
+\note{
+Al llegar al edificio, se da cuenta de que los jardines inferiores de la torre están rodeados por un muro.
+A falta de cualquier tipo de plan previo, Conan decide trepar el muro y matar al guardia que alcanza a oír del otro lado.
+Sin embargo, al librar la barda y explorar dentro de los jardines, encuentra el cadáver del guardia y se da cuenta de que hay otra persona.
+
+Sorprendentemente, en vez de atacarse mutuamente ambos hombres deciden hablar.
+Conan se entera que su interlocutor es el famoso Tauros de Nemedia, conocido como \say{el príncipe de los ladrones}.
+Y dado que ambos tienen el mismo objetivo y que Tauros se sorprende del arrojo de Conan proponen unir esfuerzos y compartir la aventura con el propósito de repartir el botín.
+}
 
 \begin{frame}{}
 \begin{columns}
@@ -402,6 +469,11 @@
     \end{figure}
 \end{columns}
 \end{frame}
+\note{
+Tauros advierte que en el jardín no hay guardias humanos, si no una jauría de leones. Pero también muestra estar preparado y con un artificio (gas envenenado) logran matar a los guardianes.
+
+Al llegar al borde de la torre, deciden escalar por la pared exterior, dado que Tauros trae consigo una cuerda para tal propósito.
+}
 
 \begin{frame}{}
 \begin{columns}
@@ -419,6 +491,10 @@
     \end{figure}
 \end{columns}
 \end{frame}
+\note{
+Cuando alcanzan la azotea de la torre, se dan cuenta de que hay una puerta al interior que no está asegurada.
+Tauros es el primero en entrar e instantes después sale por la misma puerta mortalmente herido y segundos después esta muerto.
+}
 
 \begin{frame}{}
 \begin{columns}
@@ -436,6 +512,10 @@
     \end{figure}
 \end{columns}
 \end{frame}
+\note{
+Conan decide terminar la aventura él solo, y al entrar por la puerta se ve obligado a confrontar al asesino de Tauros: una araña gigante.
+Después de un intenso combate, Conan logra aplastar a la araña lanzandole un cofre y decide continuar su descenso por la torre.
+}
 
 \begin{frame}{}
 \begin{columns}
@@ -453,6 +533,23 @@
     \end{figure}
 \end{columns}
 \end{frame}
+\note{
+Conan llega a una cámara, en la que encuentra --lo que primero cree es-- un ídolo con cuerpo de hombre pero cabeza de elefante, pero después se da cuenta que es un ser viviente.
+
+Al examinar más de cerca, se da cuenta de que el ser es un prisionero que ha sido torturado.
+Cuando la presencia de Conan despierta al ser, éste le dice que su nombre es Yag-Khosa, y decide contarle su historia.
+
+Yag-Khosa, es un ser de otro planeta que llegó a la tierra hace eones, junto con otros miembros de su especie.
+Su raza posee conocimientos en las artes místicas y en las ciencias que superan por mucho a los de los humanos.
+Al llegar a la tierra los seres elefantes, perdieron su capacidad de viajar entre los planetas y quedan atrapados en la tierra primitiva.
+Cuando los humanos emergen en la tierra como la especie dominante, los seres elefantes se retiran a la selva de Kithai donde son adorados como dioses por los nativos.
+Los seres van muriendo poco a poco hasta que Yag-Khosa, es el único sobreviviente de su raza.
+
+En ese momento es cuando conoce a Yara un hombre que desea aprender de él los conocimientos místicos.
+Yag-Khosa pasa años enseñando a Yara acerca de su magia.
+Pero Yara, lleno de ambición; logra capturar y esclavizar a Yag-Khosa por medio de la traición.
+Yag-Khosa describe como en los siglos que ha pasado en esclavitud, Yara lo ha obligado a cometer actos terribles por medio de tortura.
+}
 
 \begin{frame}{}
 \begin{columns}
@@ -470,6 +567,11 @@
     \end{figure}
 \end{columns}
 \end{frame}
+\note{
+Después de terminar su narración, Yag-Khosa le pide a Conan que se apiade de él, lo mate y que siga unas instrucciones precisas que provocarán su venganza en contra  de Yara.
+Yag-Khosa, le promete a Conan que si sigue sus instrucciones, él le dará a Conan una forma de salir a salvo de la torre.
+Conan, accede, y tal como lo instruyó Yag-Khosa, entierra su espada en el pecho de la criatura, extrae su corazón y lo exprime vertiendo la sangre en en una joya (que entonces comprende es \say{El corazón del elefante}).
+}
 
 \begin{frame}{}
 \begin{columns}
@@ -487,6 +589,12 @@
     \end{figure}
 \end{columns}
 \end{frame}
+\note{
+Luego toma la joya y sale de la habitación.
+
+Se dirige a un recinto inferior donde Yara, se encuentra meditando.
+Cuando Conan entra a la habitación, Yara despierta y Conan --siguiendo las insturcciones--, le dice que este es un regalo de parte de Yag-Khosa y pone la joya enfrente de Yara.
+}
 
 \begin{frame}{}
 \begin{columns}
@@ -504,6 +612,15 @@
     \end{figure}
 \end{columns}
 \end{frame}
+\note{
+Una especie de hechizo entra en efecto y Yara, se ve atraído hacia la joya mientras poco a poco va encogiéndose hasta que es un ser de unos cuantos centímetros que es absorbido por la joya.
+Dentro de la joya el ser diminuto que ahora es Yara, es perseguido por una versión de Yag-Khosa que entendemos esta cumpliendo su venganza.
+
+Despues de que  la venganza ha sido ejecutada, la torre empieza a derrumbarse y Conan logra salir sin encontrar ninguna resistencia.
+Al parecer el resto de los guardianes han sido inhabilitados por la promesa de Yag-Khosa.
+
+Finalmente, Conan logra salir de la torre y se pregunta si todo lo que paso ha sido un sueño. Pero al mirar hacia atrás observa el edificio, e instantes después éste se derrumba ante sus ojos.
+}
 
 \section{Personajes}
 \begin{frame}{Conan}
@@ -532,6 +649,9 @@
 \end{figure}
 \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Tauros}
 \begin{columns}
@@ -559,7 +679,9 @@
 \end{figure}
 \end{columns}
 \end{frame}
+\note{
 
+}
 
 \begin{frame}{Yag-kosha}
 \begin{columns}
@@ -589,6 +711,9 @@
 \end{figure}
 \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Yara}
 \begin{columns}
@@ -615,6 +740,9 @@
 \end{figure}
 \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Kothio anónimo}
 \begin{columns}
@@ -641,7 +769,9 @@
 \end{figure}
 \end{columns}
 \end{frame}
+\note{
 
+}
 
 \begin{frame}{La torre del elefante}
 \begin{columns}
@@ -667,6 +797,9 @@
 \end{figure}
 \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Araña gigante}
 \begin{columns}
@@ -692,6 +825,9 @@
 \end{figure}
 \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Los leones}
 \begin{columns}
@@ -721,6 +857,9 @@
 \end{figure}
 \end{columns}
 \end{frame}
+\note{
+
+}
 
 \section{Citas interesantes}
 
@@ -730,6 +869,9 @@ Había estado muchas horas en cuclillas en los patios de los filósofos, escucha
 \end{exampleblock}
 \say{\textit{He had squatted for hours in the courtyard of the philosophers, listening to the arguments of theologians and teachers, and come away in a haze of bewilderment, sure of only one thing, and that, that they were all touched in the head.}}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{}
 \begin{exampleblock}{Hombres civilizados discutiendo}
@@ -737,6 +879,9 @@ Los hombres civilizados son menos amables que los salvajes porque saben que pued
 \end{exampleblock}
 \say{\textit{Civilized men are more discourteous than savages because they know they can be impolite without having their skulls split, as a general thing.}}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{}
 \begin{exampleblock}{La culpabilidad de una raza sobre sus hombros}
@@ -744,6 +889,9 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
 \end{exampleblock}
 \say{\textit{And suddenly all fear and repulsion went from him, to be replaced by a great pity. What this monster was, Conan could not know, but the evidences of its sufferings were so terrible and pathetic that a strange aching sadness came over the Cimmerian, he knew not why. He only felt that he was looking upon a cosmic tragedy, and he shrank with shame, as if the guilt of a whole race were laid upon him.}}
 \end{frame}
+\note{
+
+}
 
 \section{Tropes literarios}
 \begin{frame}{Espada y hechizeria}
@@ -763,6 +911,9 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
  \end{figure}
  \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Conan el ladrón, el antihéroe}
 \begin{columns}
@@ -779,6 +930,9 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
  \end{figure}
  \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Instintos superan la razón}
 \begin{columns}
@@ -796,6 +950,9 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
  \end{figure}
  \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Conan odia y teme lo sobrenatural}
 \begin{columns}
@@ -817,6 +974,9 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
  \end{figure}
  \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Los cimerios escalando}
   \begin{columns}
@@ -836,6 +996,9 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \end{figure}
   \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Araña gigante}
   \begin{columns}
@@ -852,6 +1015,9 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \end{figure}
   \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Astronautas ancestrales}
 \begin{columns}
@@ -868,6 +1034,9 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \end{figure}
   \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Mitos de Chtullu}
 \begin{columns}
@@ -885,6 +1054,9 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \end{figure}
   \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Historias anidadas}
 \begin{columns}
@@ -902,6 +1074,9 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \end{figure}
   \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Hechicero malvado}
 \begin{columns}
@@ -918,6 +1093,9 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \end{figure}
   \end{columns}
 \end{frame}
+\note{
+
+}
 
 \section{Influencias}
 \begin{frame}{}
@@ -951,6 +1129,9 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
 \end{figure}
 \end{columns}
 \end{frame}
+\note{
+
+}
 
 \begin{frame}{Tributos de varios artistas}
 \begin{figure}[htp]
@@ -976,8 +1157,14 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
  \end{subfigure}
 \end{figure}
 \end{frame}
+\note{
+
+}
 
 %El último slide es igual al primero: titulo y datos de contacto
 \begin{frame}{}
     \maketitle
 \end{frame}
+\note{
+
+}
