Notes to presentation and add trope

--- a/TorreElefante/contenido.tex
+++ b/TorreElefante/contenido.tex
@@ -18,11 +18,15 @@
      \begin{itemize}
          \item Una historia corta de Robert E. Howard
          \item Una de sus mejores historias
-         \item Espada y hechicería pura
+         \item Espada y hechicería (Espada y brujería) pura
      \end{itemize}
 \end{columns}
 \end{frame}
-\note{Voy a dar crédito a los artistas cuando no sea evidente}
+\note[itemize]{
+	\item Voy a dar crédito a los artistas cuando no sea evidente
+	\item Es la historia de espada y hechizeria por antonomasia
+	\item Explicar espada y hechizeria vs espada y brujeria
+}
 
 \begin{frame}{Publicación}
 \begin{columns}
@@ -39,15 +43,15 @@
          \begin{itemize}
             \item 9800 palabras en Ingles
             \item 10600 palabras en Español
-            \item Lectura en 40-50 minutos
+            \item Lectura en 60-90 minutos
          \end{itemize}
          \item Una historia de su personaje mas famoso: Conan el bárbaro
          \item Muchas veces publicada en Español y en el idioma original
     \end{itemize}
 \end{columns}
 \end{frame}
-\note{
-
+\note[itemize]{
+	\item Decir que es la historia que yo siempre recomiendo a alguien que nunca ha leido al Conan de REH
 }
 
 \begin{frame}{Publicación}
@@ -66,16 +70,30 @@
 	\end{columns}
 \end{frame}
 \note{
-La torre del elefante forma parte del ciclo de Conan, que consta de 18 a 25 historias de REH, dependiendo de cómo queramos contarlas.
-Si solo se cuentan historias publicadas en la vida de REH, son 18 (o 17 dependiendo de si se cuenta o no \say{La hija del gigante helado}).
+Muchos ilustradores dibujan alguna escena de esta historia para sus portafolios
 
-Si se añaden la historias que fueron rechazadas por los editores durante la vida de REH, y luego publicadas después de su muerte; así como fragmentos que el autor dejó inconclusos y que fueron --muchos años después-- terminados y publicados por otros autores, ahí la cuenta sube a 25.
+Ésta fue la primera ilustración del relato
+
+Esto se vuelve interesante por una controversia aue explicare mas adelante
 }
 
 \begin{frame}{Orden de publicación del ciclo de Conan}
 \begin{figure}[htb]
   \centering
   \includegraphics[width=0.32\textwidth]{img/OrdenPublicacion}
+\end{figure}
+\end{frame}
+\note{
+La torre del elefante forma parte del ciclo de Conan, que consta de 18 a 25 historias de REH, dependiendo de cómo queramos contarlas.
+Si solo se cuentan historias publicadas en la vida de REH, son 18 (o 17 dependiendo de si se cuenta o no \say{La hija del gigante helado}).
+
+Si se añaden la historias que fueron rechazadas por los editores durante la vida de REH, y luego publicadas después de su muerte; así como fragmentos que el autor dejó inconclusos y que fueron --muchos años después-- terminados y publicados por otros autores, ahí la cuenta sube a 25.
+}
+
+\begin{frame}{Cronología ficticia del personaje}
+\begin{figure}[htb]
+  \centering
+  \includegraphics[width=0.85\textwidth]{img/Cronollogias}
 \end{figure}
 \end{frame}
 \note{
@@ -89,16 +107,6 @@ Es decir, donde nos encontramos con un Conan muy joven. Aunque en el relato su e
 De las otras obras originales de REH anteriores en la cronología dos no son cuentos.
 El ensayo La era Hiboria y el poema Cimeria.
 Finalmente a la única historia que la antecede: La hija del gigante helado a veces se le disputa su status de historia de Conan.
-}
-
-\begin{frame}{Cronología ficticia del personaje}
-\begin{figure}[htb]
-  \centering
-  \includegraphics[width=0.85\textwidth]{img/Cronollogias}
-\end{figure}
-\end{frame}
-\note{
-
 }
 
 \begin{frame}{Espacio en la edad Hiboria}
@@ -146,7 +154,13 @@ Finalmente a la única historia que la antecede: La hija del gigante helado a ve
 \end{columns}
 \end{frame}
 \note{
+El dibujante e ilustrado Ingles Barry Windsor Smith, se volvio famoso por su trabajo en este titulo entre 1970 y 1973, despues dibujaria Weapon X.
 
+El dibujante Italoamericano Sal Buscema, entitno en uno de sus primeros trabajos (antes de que se volviera artista principal).
+
+Roy Thomas, es quein introdujo el personaje de Coonan a los comics, es probablemente el mejor adaptador de historias de REH al Comic. Ha creado muchisimos peronajes de Marvel, probablemente la figura mas influyente de Marvel despues de Stand Lee.
+
+Se le da credito como editor al jefe de la compania Satand Lee
 }
 
 % \begin{frame}{}
@@ -204,7 +218,13 @@ Finalmente a la única historia que la antecede: La hija del gigante helado a ve
 \end{columns}
 \end{frame}
 \note{
+Este seria para mi el comic perfecto o el mas representativo de la edad de oro de Conan (ya se que tecnicament es la edad de bronze de los comics de lo 70 al 85)
 
+El Artista es John Buscema, es el hermano mayor de Sal Buscema. Tambien italoamericano, es para mi el mejor dibujante de Conan, de hecho, si a mi me piden que cierre los ojos y me imagine a Conan me lo imagino como lo dibujaba Jhon Buscema.
+
+El artista Filipino Alfredo Alcala es el segundo artista, probablemnet en la escenas de la narracion de YogKhosha. El ya habia hecho un personaje parecido a Conan, Voltar y se dice que Frank Frazetta se inspiro en el para hacer su propio Conan
+
+El artista norteamericano Earl Norem en la portada. Es probablemnete el artista que mas portadas de TSSC hizo durante la serie.
 }
 
 % \begin{frame}{}
@@ -274,6 +294,21 @@ Finalmente a la única historia que la antecede: La hija del gigante helado a ve
 \end{columns}
 \end{frame}
 \note{
+Probablemnete la mejor adaptacion de la obra original de REH a un Comic.
+Uno de lo mejore miniarcos de Conan de DrakHrse, forma parte de su mejor volume el que simpremente se llamaba Conan
+Hereda parte del equiop creativo que ya habia ganado el Eisner por el numero 0
+Cuando vi por primera vez esta serie era una forma de hacer comics que nunca habia visto (sin entintador)
+Estos numeros tambien ocupan esa tecnica
+
+El canadiense Cary Nord en los trazos, que como dijimos gano el Eisner por el numero 0 de Conan, uno de los grandes dibujantes de Conan de todos los tiempos.
+
+Es escritor Estadounidense Kurt Busiek, el gran escritor de la corrida de Conan con DH, famoso por su comic Astro City, aqui hace una gran labor adaptando.
+
+El colorista estadounidense Dave Steward, que es una garantia, pues el solo tiene mas Eisners que todos los antes mencionados. Y que el pobre sufre la maldicion de los homonimos.
+
+El artista/pintor mexicano Jose Lardonn, de Veracruz, tambien con Eisner junto con Richard Stalking y que se ha dedicado mas al arte que a los comics. Este es uno de lo pocos ejemplos en las portadas. Kudos por la tercera portada
+
+El britanico Richard Starkings aka Comicraft, que es el mejor y mas famoso letrista en los comics hoy dia, famoso por elephanmen, y aun ligado a Conan con la mas reciente publicacion de Titan
 
 }
 
@@ -295,11 +330,19 @@ Finalmente a la única historia que la antecede: La hija del gigante helado a ve
 				\item[Artista:] Enrique Alcatena
 				\item[Escritor:] Claudio Álvarez
 			\end{description}
+			\begin{figure}[htb]
+				\centering
+				\includegraphics[width=0.4\textwidth]{img/AlcatenaTorre2}
+			\end{figure}
 		\end{itemize}
 	\end{columns}
 \end{frame}
 \note{
+Editorial Chilen Action Comics
 
+El artista argentino Enrique \say{Kike} alcatena, que ya antes habia dibujado a Conan para Marvel.
+
+El guionista y periodista Claudio Álvarez que forma parte de los fundadores de la editorial y que asumo que es Chileno.
 }
 
 \begin{frame}{Conan illustré: La Tour de l’Eléphant}
@@ -319,11 +362,16 @@ Finalmente a la única historia que la antecede: La hija del gigante helado a ve
 			\begin{description}
 				\item[Artista:] Valentin Sécher
 			\end{description}
+		    \begin{figure}[htb]
+			   \centering
+			   \includegraphics[width=0.45\textwidth]{img/vSecher}
+     		\end{figure}
 		\end{itemize}
 	\end{columns}
 \end{frame}
 \note{
-
+El ilustrado Frances Valentin Sécher, que ya antes habia hecho una obra de Conana ilustrada, pero ue es con esta l a que alacanza su prime.
+Es tan buena que la editorial Titan esta en platicas para hacer una edicion en Ingles (que se publicará en Agosto de este año)
 }
 % \begin{frame}{}
 % \begin{figure}[htp]
@@ -650,7 +698,7 @@ Finalmente, Conan logra salir de la torre y se pregunta si todo lo que paso ha s
 \end{columns}
 \end{frame}
 \note{
-
+Mencionar idea del salvaje noble
 }
 
 \begin{frame}{Tauros}
@@ -861,6 +909,7 @@ Finalmente, Conan logra salir de la torre y se pregunta si todo lo que paso ha s
 
 }
 
+
 \section{Citas interesantes}
 
 \begin{frame}{}
@@ -910,6 +959,25 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
     \caption{Abe Papakhian}
  \end{figure}
  \end{columns}
+\end{frame}
+\note{
+
+}
+
+\begin{frame}{Taberna}
+	\begin{columns}
+		\column[t]{0.4\textwidth}
+		\begin{itemize}
+			\item En la taberna del pueblo se congregan todos los maleantes
+			\item Altas probabilidades de una pelea
+			\item Los agentes de la ley no intervienen, o llegaran tarde
+		\end{itemize}
+		\column[t]{0.6\textwidth}
+		\begin{figure}[htb]
+			\centering
+			\includegraphics[width=0.7\textwidth]{img/tropes/taberna}
+		\end{figure}
+	\end{columns}
 \end{frame}
 \note{
 
@@ -1055,7 +1123,7 @@ Y súbitamente todo el miedo y el asco se convirtieron en una profunda compasió
   \end{columns}
 \end{frame}
 \note{
-
+Mencionar lo de la apariencia de YogKhosha como Cthullu en vez de elefante.
 }
 
 \begin{frame}{Historias anidadas}
